1.添加了一个容器的图标 2.删除了初始化项目一些无用的文件和注释 3.添加了一个新的容器，用于放置树视图

--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:codesubmit.helloWorld"
+		"*"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
-		"commands": [
-			{
-				"command": "codesubmit.helloWorld",
-				"title": "Hello World"
-			}
-		]
+		"viewsContainers": {
+			"activitybar": [
+				{
+					"id": "my-explorer",
+					"title": "My Explorer",
+					"icon": "media/my.svg"
+				}
+			]
+		}
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
