1.添加了四个图标 2.设计出了代码下载的树视图(配备对应的图标)

--- a/package.json
+++ b/package.json
@@ -19,7 +19,15 @@
 				{
 					"id": "my-explorer",
 					"title": "My Explorer",
-					"icon": "media/my.svg"
+					"icon": "resources/my.svg"
+				}
+			]
+		},
+		"views": {
+			"my-explorer":[
+				{
+					"id": "codesubmit",
+					"name": "Code Submit"
 				}
 			]
 		}
